--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
 
@@ -34,7 +36,7 @@
                     <a href="#services" class="navbar__links" id="services-page">Services</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#sign-up" class="button navbar__links" id="signup">Contact</a>
+                    <a href="#contact" class="button navbar__links" id="signup">Contact</a>
                 </li>
             </ul>
         </div>
@@ -45,7 +47,7 @@
             <h1 class="euro__heading">We are glad your are here</h1>
             <p class="euro__description">Let's take your business to the world</p>
             <button class="main__btn">
-                <a href="#">Explore</a>
+                <a href="/about.html">Explore</a>
             </button>
         </div>
     </div>
@@ -62,10 +64,10 @@
                 <h1>Who we are</h1>
                 <h2>We are Technology Consulting Specialists focused on bringing Businesses to the Online space</h2>
                 <p>We help business owners increase their revenue by giving them access to more customers and
-                    convenience means of doing business. All these and more we can help you achieve. All you need to do
+                    convenience online and offline business environment. All you need to do
                     is tell us what you want and leave the rest to us.</p>
                 <button class="main__btn">
-                    <a href="#">Contact Now</a>
+                    <a href="/about.html">Read More</a>
                 </button>
             </div>
         </div>
@@ -78,19 +80,19 @@
             <div class="services__card">
                 <div class="box-icon">
                     <div class="box-icon-wrap">
-                        <i class="fas fa-lightbulb"></i>
+                        <i class="fas fa-desktop"></i>
                     </div>
                 </div>
                 <div class="service-content">
                     <h2>Website Design & Development</h2>
-                    <p>We design and develop professional websites for our clients ranging from small business owners,
-                        enterprise companies, transportation, real estate companies.</p>
+                    <p>We design and develop professional websites for our clients. Personal website, website for SMEs,
+                        corporate organizations, companies, transportation and real estate.</p>
                 </div>
             </div>
             <div class="services__card">
                 <div class="box-icon">
                     <div class="box-icon-wrap">
-                        <i class="fas fa-lightbulb"></i>
+                        <i class="fas fa-mobile"></i>
                     </div>
                 </div>
                 <div class="service-content">
@@ -117,14 +119,14 @@
             <div class="services__card">
                 <div class="box-icon">
                     <div class="box-icon-wrap">
-                        <i class="fas fa-lightbulb"></i>
+                        <i class="fas fa-line-chart"></i>
                     </div>
                 </div>
                 <div class="service-content">
                     <h2>Digital Marketing</h2>
                     <p>This is what we do for our clients as an additional services. We make your online presence
-                        noticable
-                        by adding additional tools to improve SEO on your website. We offer additional services like
+                        noticable by adding additional tools to improve SEO and make your website loved by google and
+                        other search engines. We offer additional services like
                         social media advertising</p>
                 </div>
             </div>
@@ -139,7 +141,7 @@
                 <h2>Call Us Today</h2>
                 <p>See what makes us different</p>
                 <button class="main__btn">
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </button>
             </div>
             <div class="main__img--container">
@@ -149,6 +151,22 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <!--===== CONTACT =====-->
+    <div class="contact section" id="contact">
+        <h2 class="section-title">Send A Message</h2>
+
+        <div class="contact__container bd-grid">
+            <form id="form-field" class="contact__form">
+                <input type="text" name="name" placeholder="Name or Business Name" class="contact__input" required>
+                <input type="email" name="email" placeholder="Email" class="contact__input" required>
+                <input type="tel" name="phone" placeholder="Phone number" class="contact__input" required>
+                <input type="text" name="subject" placeholder="Subject" class="contact__input" required>
+                <textarea name="message" id="" cols="0" rows="10" class="contact__input" required></textarea>
+                <button type="submit" class="contact__button main__btn">Send</button>
+            </form>
         </div>
     </div>
 
