--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EUTechsoft</title>
+    <title>Eutek</title>
+    <link rel="icon" type="image/png" href="/assets/img/eutek.png">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
@@ -14,11 +15,11 @@
 </head>
 
 <body>
-    <!-- Navba Section -->
+    <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
             <a href="#home" id="navbar__logo">
-                <img src="/assets/img/eutechsoft.png" alt="EUTechsoft Consulting">
+                <img src="/assets/img/eutek.png" alt="EUTek Consulting">
             </a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -49,10 +50,15 @@
             <div class="main__content">
                 <h1>About Us</h1>
                 <h2>We are EXPERTS in using Technology to make life easier</h2>
+                <p>With the global space economy valued at about
+                    423.8 billion U.S. dollars in 2019 (figure from statista.com) and is estimated to grow upto 935
+                    billion U.S. dollars in 2023, it is evident that the online space has more to offer in terms of
+                    revenue for businesses.
+                <p>Every business has to understand this fact that to stay competitive and rooted in the thriving
+                    market,
+                    they need to get aid from the ever-evolving technologies and create a digital presence for their
+                    business, and we are here at your service.</p>
                 <p>We help business owners increase their revenue by giving them access to more customers and
-                    convenience online and offline business environment. All you need to do
-                    is tell us what you want and leave the rest to us. We help business owners increase their revenue by
-                    giving them access to more customers and
                     convenience online and offline business environment.</p>
                 <p>We believe that life can be a lot easier if you make use of the right technology for the right task.
                     That is why we are here for you. Just hit the <code>blue button</code> and let us know what we can
@@ -69,7 +75,7 @@
         </div>
     </div>
 
-    <div class="main" id="about">
+    <div class="main" id="explore">
         <div class="main__container">
             <div class="main__img--container head-1">
                 <h1>SAMPLE PROJECTS</h1>
@@ -108,26 +114,54 @@
         </div>
     </div>
 
+    <div class="main" id="about">
+        <div class="main__container">
+            <div class="main__img--container head-1">
+                <div class="main__img--card">
+                    <img src="/assets/img/perfil.jpg" alt="Ugochukw Umeoke" class="my-profile-img" />
+                </div>
+            </div>
+
+            <div class="main__content head-2">
+                <h2>About The Author</h2>
+                <p>My name is Ugochukwu Umeoke. I am a full-stack Javascript Developer with good experience building and
+                    deploying technologies. I am
+                    resourceful, energetic and
+                    self motivated. I am passionate about productivity, development with best practices and learning
+                    while building new things. Most of my projects are built using Javascript and its framework..</p>
+                <button class="main__btn">
+                    <a target="_blank" href="https://eurocodes.github.io/">Read More</a>
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer Section -->
     <div class="footer__container">
         <section class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo">EUTechsoft</a>
+                    <a href="/" id="footer__logo">Eutek Software Solutions</a>
                 </div>
-                <p class="website__rights">&copy; EUTechsoft 2020. All rights reserved</p>
+                <p class="website__rights" id="rights">My appreciation goes to USCCB & Catholic Diocese of Wichita whose
+                    contents are displayed in this app.</p>
                 <div class="social__icons">
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="https://facebook.com/euteksoftwares/" class="social__icon--link" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="https://twitter.com/euteksoft?s=08" class="social__icon--link" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="https://www.instagram.com/eutek.software?r=nametag" class="social__icon--link"
+                        target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="/" class="social__icon--link" target="_blank">
+                    <a href="https://www.linkedin.com/company/eutechsoft-solutions/?viewAsMember=true"
+                        class="social__icon--link" target="_blank">
                         <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="mailto:euteksoft@gmail.com" class="social__icon--link" target="_blank">
+                        <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
             </div>
